##Text encoding: utf-8

2016-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: fix embedding of a whole molecule. [#47224]
	* plugins/paint/selection/bracketstool.cc: fix spacings.

2016-02-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.h: make reaction export to .cdx possible.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* plugins/loaders/cdx/cdx.cc: export reactions.

2016-02-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: export graphic objects to .cdx.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/reaction-operator.cc: ditto.
	* libs/gcp/reaction-operator.h: ditto.
	* libs/gcp/reaction-step.cc: improve operator position.
	* libs/gcp/text.cc: enhance position preision on export.
	* libs/gcu/atom.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: export graphic objects.

2016-02-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a new direct OpenGL rendering option. [#47169]
	* libs/gcr/application.cc: ditto.
	* libs/gcr/application.h: ditto.
	* libs/gcr/window.cc: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/chem3dapplication.cc: ditto.
	* libs/gcugtk/chem3dapplication.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/glapplication.cc: ditto.
	* libs/gcugtk/glapplication.h: ditto.
	* libs/gcugtk/glview.cc: ditto.
	* libs/gcugtk/glview.h: ditto.
	* plugins/loaders/cdx/cdx.cc: attached imported strings to the reaction
	arrow.
	* programs/paint/gchempaint.desktop.in.in: add keywords.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: add a new direct OpenGL
	rendering option.

2016-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: ensure font family is correctly exported.
	* plugins/loaders/cdx/cdx.cc: save theme and fix various text export issues.

2016-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: fix build with gcc-6 (and potential crasher).
	[Redhat bug #1307546]