@@ -1,9 +1,11 @@
 [Desktop Entry]
 Version=1.0
-_Name=Chemical calculator@STABILITY_POSTFIX@
+Name=GChemCalc@STABILITY_POSTFIX@
+_GenericName=Chemical calculator@STABILITY_POSTFIX@
 _Comment=A simple calculator for chemistry
 Exec=gchemcalc-@GCU_API_VER@
 Icon=gchemcalc
 Terminal=false
 Type=Application
 Categories=GTK;GNOME;Education;Science;Chemistry;
+Keywords=chemistry;calculator;
